--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,11 @@ body {
    padding: 10px 0;
    text-align: right;
    padding-right: 30px;
+   position:absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+  
  }
  nav a {
    color: #fff;
@@ -68,6 +73,20 @@ body {
   color: #333;
  }
 
+ .btn{
+  list-style: none;
+  padding:10px 16px;
+  background: #1c7a62;
+  border-radius: 5px;
+ }
+
+
+
+ .btn a{
+  text-decoration: none;
+  color:#fff;
+ }
+
 
  .container {
   display: flex;
@@ -76,13 +95,43 @@ body {
    
 }
 
+#profile{
+  height: 100vh;
+  /* width: 100vw; */
+  background: url('/photos/dubaicity.jpg') no-repeat center top /cover;
+  /* background-size: cover; */
+  background-attachment: fixed;
+  position: relative;
+  
+}
+
+#profile::before{
+  content: '';
+  position:absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.3);
+  z-index: 10;
+  
+}
+
+#profile *{
+  z-index: 10;
+}
+
  /* img container */
 .profile-container{
-  padding-top: 20px;
+  /* padding-top: 20px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100vh;  
+  color: #fff;
+  
+  
 }
 
 .pro-pic img{
