--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-   font-family: Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f2f2f2;
@@ -49,8 +49,12 @@ body {
    top: 0;
    left: 0;
    width: 100%;
-  
+   display: flex;  
+   justify-content: center;  
+   flex-wrap: wrap;
+     
  }
+ 
  nav a {
    color: #fff;
    text-decoration: none;
@@ -63,6 +67,7 @@ body {
    padding: 40px;
  } */
 
+ 
  .dark{
   background: #1c7a62;
   color:#fff;;
@@ -75,11 +80,25 @@ body {
 
  .btn{
   list-style: none;
-  padding:10px 16px;
+  padding:10px ;
   background: #1c7a62;
   border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
  }
 
+ .myname{
+  padding-bottom: 0;
+  color: #ffa500;
+  font-size: 32px;
+   }
+
+ .role{
+  padding-top:6px;
+  padding-bottom: 16px;
+  font-size: 20px;
+ }
 
 
  .btn a{
@@ -112,7 +131,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0,0,0,0.6);
   z-index: 10;
   
 }
